Improve navigator to avoid clipping

--- a/public_html/XDI_graph_editor.css
+++ b/public_html/XDI_graph_editor.css
@@ -404,7 +404,7 @@ body{
   right: 0%;
   bottom: 0%;
   pointer-events:none;
-  background: rgba(255,255,255,0.5);
+  background: rgba(200,200,200,0.5);
 }
 
 #zoomText{
